--- a/coffee_project/src/main/resources/templates/customer/view.html
+++ b/coffee_project/src/main/resources/templates/customer/view.html
@@ -3,63 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style th:insert="/layout::style"></style>
+    <style th:replace="/layout::style"></style>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
     <style>
-        body {
-            font-family: "Source Code Pro";
-        }
         th {
             text-align: left;
         }
     </style>
 </head>
 <body>
-<div th:replace="layout::nav"></div>
 <div class="container-fluid">
     <div class="row">
-        <div th:replace="layout::content1"></div>
-        <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
-            <div class="detail">
-                <div style="text-align: center; margin-top: 2rem"><h1><b>Thông Tin Khách Hàng</b></h1></div>
-                <div class="table" style="text-align: center;display: flex;justify-content: center; margin-top: 2rem">
-                    <table class="table table-hover" style="width: 60%">
-                        <tr>
-                            <th>Tên khách hàng</th>
-                            <td th:text="${customer.customerName}">
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>Giới tính</th>
-                            <td th:if="${customer.customerGender}" th:text="Nam"></td>
-                            <td th:if="${!customer.customerGender}" th:text="Nữ"></td>
-                        </tr>
-                        <tr>
-                            <th>Ngày sinh</th>
-                            <td th:text="${#dates.format(customer.customerBirthday,'dd-MM-yyyy')}"></td>
-                        </tr>
-                        <tr>
-                            <th>Số điện thoại</th>
-                            <td th:text="${customer.customerPhoneNumber}"></td>
-                        </tr>
-                        <tr>
-                            <th>Điểm</th>
-                            <td th:text="${customer.customerPoint}"></td>
-                        </tr>
-                        <tr>
-                            <td colspan="2">
-                                <a th:href="@{/customer/list}"><button type="button" class="btn btn-primary">Quay lại
-                                </button></a>
-                            </td>
-                        </tr>
-                    </table>
+        <div th:replace="layout::side-bar">
+        </div>
+        <div class="col-10  col-sm-9 col-md-9 col-lg-10">
+            <div th:replace="layout::nav-bar"></div>
+            <div class="row min-vh-100 content">
+                <div class="col-12">
+                    <!--------------------------------------Main------------------------------------>
+                    <div class="detail">
+                        <div style="text-align: center; margin-top: 2rem"><h1><b>Thông Tin Khách Hàng</b></h1></div>
+                        <div class="table"
+                             style="text-align: center;display: flex;justify-content: center; margin-top: 2rem">
+                            <table class="table table-hover" style="width: 60%">
+                                <tr>
+                                    <th>Tên khách hàng</th>
+                                    <td th:text="${customer.customerName}">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Giới tính</th>
+                                    <td th:if="${customer.customerGender}" th:text="Nam"></td>
+                                    <td th:if="${!customer.customerGender}" th:text="Nữ"></td>
+                                </tr>
+                                <tr>
+                                    <th>Ngày sinh</th>
+                                    <td th:text="${#dates.format(customer.customerBirthday,'dd-MM-yyyy')}"></td>
+                                </tr>
+                                <tr>
+                                    <th>Số điện thoại</th>
+                                    <td th:text="${customer.customerPhoneNumber}"></td>
+                                </tr>
+                                <tr>
+                                    <th>Điểm</th>
+                                    <td th:text="${customer.customerPoint}"></td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2">
+                                        <a th:href="@{/customer/list}">
+                                            <button type="button" class="btn btn-primary">Quay lại
+                                            </button>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    <!--------------------------------------End-main--------------------------------------->
                 </div>
             </div>
+            <div th:replace="layout::footer"></div>
         </div>
     </div>
 </div>
-<div th:replace="layout::footer"></div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script th:src="@{/bootstrap-5.0.2-dist/js/bootstrap.bundle.js}"
         src="../static/bootstrap-5.0.2-dist/js/bootstrap.bundle.js"></script>
 </body>
