tín[coffee][product] update view

--- a/coffee_project/src/main/resources/templates/product/create.html
+++ b/coffee_project/src/main/resources/templates/product/create.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -31,103 +31,113 @@
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
 </head>
 <body>
-<div th:replace="layout::nav"></div>
 <div class="container-fluid">
     <div class="row">
-        <div th:replace="layout::content1"></div>
-        <div class="col-sm-10" style="background-color: #FEFAE0; min-height: 700px">
-            <h1 style="text-align: center">Thêm Mới Sản Phẩm</h1>
-            <div class="container">
-                <form action="/product/create" method="post" th:object="${product}">
-                    <div style="display: inline-flex;">
-                        <div class="col-md-4">
-                            <div class="image-container">
-                                <img id="imagePreview" th:src="*{productImagePath}" alt="" class="img-thumbnail">
-                            </div>
+        <div th:replace="layout::side-bar">
+        </div>
+        <div class="col-10  col-sm-9 col-md-9 col-lg-10">
+            <div th:replace="layout::nav-bar">
+            </div>
+            <div class="row min-vh-100 content">
+                <div class="col-12">
+                    <h1 style="text-align: center">Thêm Mới Sản Phẩm</h1>
+                    <div class="container">
+                        <form action="/product/create" method="post" th:object="${product}">
+                            <div style="display: inline-flex;">
+                                <div class="col-md-4">
+                                    <div class="image-container">
+                                        <img id="imagePreview" th:src="*{productImagePath}" alt=""
+                                             class="img-thumbnail">
+                                    </div>
 
-                            <div class="form-group">
-                                <label for="btnThumbnailURL" style="width: 89%" class="form-control">Chọn ảnh</label>
-                                <input type="hidden" id="thumbnailURL" th:field="*{productImagePath}"/>
-                                <input id="btnThumbnailURL" type="file" style="display: none;"/>
-                                <progress id="uploader" value="0" max="100">0%</progress>
-                            </div>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="form-container">
-                                <div class="form-group">
-                                    <div class="row">
-                                        <table class="table table-hover">
-                                            <tr>
-                                                <th>
-                                                    <b>Tên sản phẩm <span style="color: red">*</span></b>
-                                                </th>
-                                                <td>
-                                                    <input type="text" th:field="*{productName}" id="productName"
-                                                           class="form-control">
-                                                    <div style="height: 28px">
-                                                        <small style="color: red"
-                                                               th:if="${#fields.hasErrors('productName')}"
-                                                               th:errors="*{productName}"></small>
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <th>
-                                                    <b>Giá <span style="color: red">*</span></b>
-                                                </th>
-                                                <td>
-                                                    <input type="number" th:field="*{productPrice}" id="salary"
-                                                           class="form-control">
-                                                    <div style="height: 25px">
-                                                        <small style="color: red"
-                                                               th:if="${#fields.hasErrors('productPrice')}"
-                                                               th:errors="*{productPrice}"></small>
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <th>
-                                                    <b>Chọn loại sản phẩm</b>
-                                                </th>
-                                                <td>
-                                                    <select th:field="*{productType}" id="productType"
-                                                            class="form-control">
-                                                        <option th:each="productType : ${productTypes}"
-                                                                th:value="${productType.productTypeId}"
-                                                                th:text="${productType.productTypeName}"></option>
-                                                    </select>
-                                                </td>
-                                            </tr>
-                                            <br>
-                                            <tr>
-                                                <th>
-                                                    <b>Mô tả</b>
-                                                </th>
-                                                <td>
+                                    <div class="form-group">
+                                        <label for="btnThumbnailURL" style="width: 89%" class="form-control">Chọn
+                                            ảnh</label>
+                                        <input type="hidden" id="thumbnailURL" th:field="*{productImagePath}"/>
+                                        <input id="btnThumbnailURL" type="file" style="display: none;"/>
+                                        <progress id="uploader" value="0" max="100">0%</progress>
+                                    </div>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="form-container">
+                                        <div class="form-group">
+                                            <div class="row">
+                                                <table class="table table-hover">
+                                                    <tr>
+                                                        <th>
+                                                            <b>Tên sản phẩm <span style="color: red">*</span></b>
+                                                        </th>
+                                                        <td>
+                                                            <input type="text" th:field="*{productName}"
+                                                                   id="productName"
+                                                                   class="form-control">
+                                                            <div style="height: 28px">
+                                                                <small style="color: red"
+                                                                       th:if="${#fields.hasErrors('productName')}"
+                                                                       th:errors="*{productName}"></small>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th>
+                                                            <b>Giá <span style="color: red">*</span></b>
+                                                        </th>
+                                                        <td>
+                                                            <input type="number" th:field="*{productPrice}" id="salary"
+                                                                   class="form-control">
+                                                            <div style="height: 25px">
+                                                                <small style="color: red"
+                                                                       th:if="${#fields.hasErrors('productPrice')}"
+                                                                       th:errors="*{productPrice}"></small>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th>
+                                                            <b>Chọn loại sản phẩm</b>
+                                                        </th>
+                                                        <td>
+                                                            <select th:field="*{productType}" id="productType"
+                                                                    class="form-control">
+                                                                <option th:each="productType : ${productTypes}"
+                                                                        th:value="${productType.productTypeId}"
+                                                                        th:text="${productType.productTypeName}"></option>
+                                                            </select>
+                                                        </td>
+                                                    </tr>
+                                                    <br>
+                                                    <tr>
+                                                        <th>
+                                                            <b>Mô tả</b>
+                                                        </th>
+                                                        <td>
                                                     <textarea type="text" th:field="*{productDescription}"
                                                               id="productDescription"
                                                               class="form-control"></textarea>
-                                                </td>
-                                            </tr>
-                                        </table>
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-primary">Thêm mới</button>
+                                            <a style="color: white" href="/product">
+                                                <button type="button" class="btn btn-secondary">Quay lại</button>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <button type="submit" class="btn btn-primary">Thêm mới</button>
-                                    <a style="color: white" href="/product">
-                                        <button type="button" class="btn btn-secondary">Quay lại</button>
-                                    </a>
-                                </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
-                </form>
+                </div>
+            </div>
+            <div th:replace="layout::footer">
             </div>
         </div>
     </div>
 </div>
-</div>
-<div th:replace="layout::footer"></div>
+
 <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-analytics.js"></script>
 <script>
