--- a/coffee_project/src/main/resources/templates/product/list.html
+++ b/coffee_project/src/main/resources/templates/product/list.html
@@ -116,135 +116,147 @@
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
 </head>
 <body>
-<div th:replace="layout::nav"></div>
 <div class="container-fluid">
     <div class="row">
-        <div th:replace="layout::content1"></div>
-        <div class="col-sm-10" style="background-color: #FEFAE0;min-height: 700px">
-            <h1 style="text-align: center">Quản Lý Sản Phẩm</h1>
-            <!--                        <span th:if="${msg}!=null" th:text="${msg}" id="success"-->
-            <!--                              class="tin"-->
-            <!--                              style="float: left; background-color: rgba(97,139,234,0.87);font-size: 20px"></span>-->
-            <div class="row">
-                <a class="col-1" href="/product/create" style="color: white">
-                    <button title="Thêm mới sản phẩm"
-                            class="btn btn-primary">
-                        <i class="fa-solid fa-plus"></i></button>
-                </a>
-                <span class="col-4"></span>
-                <form class="col-7" action="/product" method="get">
-                    <select name="productType">
-                        <option style="text-align: center" value="" selected>Chọn loại</option>
-                        <option th:each="productType : ${productTypes}" th:value="${productType.productTypeId}"
-                                th:selected="${productType.productTypeId} == ${productTypee}"
-                                th:text="${productType.productTypeName}"></option>
-                    </select>
-                    <select name="price">
-                        <option style="text-align: center" value="" selected> Chọn giá</option>
-                        <option th:each="price : ${prices}" th:value="${price}"
-                                th:selected="${price} == ${pricee}"
-                                th:text="${price}+' VNĐ'"></option>
-                    </select>
-                    <input th:value="${name}" type="text" name="name" placeholder="nhập tên sản phẩm ">
-                    <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i>
-                    </button>
-                </form>
+        <div th:replace="layout::side-bar">
+        </div>
+        <div class="col-10  col-sm-9 col-md-9 col-lg-10">
+            <div th:replace="layout::nav-bar">
             </div>
-            <div class="table-responsive">
-                <table class="table table-hover">
-                    <thead>
-                    <tr>
-                        <th>STT</th>
-                        <th>Hình ảnh</th>
-                        <th>Tên</th>
-                        <th>Loại</th>
-                        <th>Giá</th>
-                        <th>Sửa</th>
-                        <th>Xóa</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="product,status: ${products}">
-                        <td th:text="${status.count}"></td>
-                        <td><img th:src="${product.productImagePath}" alt="product image" width="100"></td>
-                        <td th:text="${product.productName}">Product Name</td>
-                        <td th:text="${product.productType.productTypeName}">Product Type</td>
-                        <td th:text="${#numbers.formatDecimal(product.productPrice, 0, 'COMMA', 0, 'POINT')} +' VNĐ'"
-                            class="card-text">Product Price
-                        </td>
-                        <div class="d-flex justify-content-between">
-                            <td>
-                                <a style="color: white" th:href="@{/product/edit/{id}(id=${product.productId})}">
-                                    <button class="btn btn-primary">
-                                        <i class="fa-solid fa-pen-to-square"></i>
-                                    </button>
-                                </a>
-                            </td>
-                            <td>
-                                <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                                        data-bs-target="#exampleModal"
-                                        th:data-p1="${product.productId}" th:data-p2="${product.productName}"
-                                        th:data-p3="${product.productId}"
-                                        onclick="showInfo(this.getAttribute('data-p1'), this.getAttribute('data-p2'), this.getAttribute('data-p3'))">
-                                    <i class="fa-regular fa-trash-can"></i>
-                                </button>
-                            </td>
-                        </div>
-                    </tr>
-                    </tbody>
-                </table>
-                <!---------------------------Paging--------------------------------------------------------------->
-                <div class="d-flex justify-content-center">
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination">
-                            <li th:class="${!products.hasPrevious()} ? 'page-item disabled' : 'page-item'"><a
-                                    class="page-link"
-                                    th:href="@{/product(page=${products.number-1},name=${name},productType=${productType},price=${price})}">Lùi</a>
-                            </li>
+            <div class="row min-vh-100 content">
+                <div class="col-12">
+                    <h1 style="text-align: center">Quản Lý Sản Phẩm</h1>
+                    <!--                        <span th:if="${msg}!=null" th:text="${msg}" id="success"-->
+                    <!--                              class="tin"-->
+                    <!--                              style="float: left; background-color: rgba(97,139,234,0.87);font-size: 20px"></span>-->
+                    <div class="row">
+                        <a class="col-1" href="/product/create" style="color: white">
+                            <button title="Thêm mới sản phẩm"
+                                    class="btn btn-primary">
+                                <i class="fa-solid fa-plus"></i></button>
+                        </a>
+                        <span class="col-4"></span>
+                        <form class="col-7" action="/product" method="get">
+                            <select name="productType">
+                                <option style="text-align: center" value="" selected>Chọn loại</option>
+                                <option th:each="productType : ${productTypes}" th:value="${productType.productTypeId}"
+                                        th:selected="${productType.productTypeId} == ${productTypee}"
+                                        th:text="${productType.productTypeName}"></option>
+                            </select>
+                            <select name="price">
+                                <option style="text-align: center" value="" selected> Chọn giá</option>
+                                <option th:each="price : ${prices}" th:value="${price}"
+                                        th:selected="${price} == ${pricee}"
+                                        th:text="${price}+' VNĐ'"></option>
+                            </select>
+                            <input th:value="${name}" type="text" name="name" placeholder="nhập tên sản phẩm ">
+                            <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i>
+                            </button>
+                        </form>
+                    </div>
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead>
+                            <tr>
+                                <th>STT</th>
+                                <th>Hình ảnh</th>
+                                <th>Tên</th>
+                                <th>Loại</th>
+                                <th>Giá</th>
+                                <th>Sửa</th>
+                                <th>Xóa</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="product,status: ${products}">
+                                <td th:text="${status.count}"></td>
+                                <td><img th:src="${product.productImagePath}" alt="product image" width="100"></td>
+                                <td th:text="${product.productName}">Product Name</td>
+                                <td th:text="${product.productType.productTypeName}">Product Type</td>
+                                <td th:text="${#numbers.formatDecimal(product.productPrice, 0, 'COMMA', 0, 'POINT')} +' VNĐ'"
+                                    class="card-text">Product Price
+                                </td>
+                                <div class="d-flex justify-content-between">
+                                    <td>
+                                        <a style="color: white"
+                                           th:href="@{/product/edit/{id}(id=${product.productId})}">
+                                            <button class="btn btn-primary">
+                                                <i class="fa-solid fa-pen-to-square"></i>
+                                            </button>
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <!-- Button trigger modal -->
+                                        <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                                data-bs-target="#exampleModal"
+                                                th:data-p1="${product.productId}" th:data-p2="${product.productName}"
+                                                th:data-p3="${product.productId}"
+                                                onclick="showInfo(this.getAttribute('data-p1'), this.getAttribute('data-p2'), this.getAttribute('data-p3'))">
+                                            <i class="fa-regular fa-trash-can"></i>
+                                        </button>
+                                    </td>
+                                </div>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <!---------------------------Paging--------------------------------------------------------------->
+                        <div class="d-flex justify-content-center">
+                            <nav aria-label="Page navigation example">
+                                <ul class="pagination">
+                                    <li th:class="${!products.hasPrevious()} ? 'page-item disabled' : 'page-item'"><a
+                                            class="page-link"
+                                            th:href="@{/product(page=${products.number-1},name=${name},productType=${productType},price=${price})}">Lùi</a>
+                                    </li>
 
-                            <li class="page-link disabled"><span th:text="${products.number +1}"></span>/<span
-                                    th:text="${products.totalPages}"></span>
-                            </li>
+                                    <li class="page-link disabled"><span th:text="${products.number +1}"></span>/<span
+                                            th:text="${products.totalPages}"></span>
+                                    </li>
 
-                            <li th:class="${!products.hasNext()} ? 'page-item disabled' : 'page-item'"><a
-                                    class="page-link"
-                                    th:href="@{/product(page=${products.number+1},name=${name},productType=${productType},price=${price})}">Tới</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <!------------------------End Paging------------------------------------------------------------>
-                </div>
-                <!-- Modal -->
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                     aria-hidden="true">
-                    <form action="/product/delete" method="post">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h1 class="modal-title fs-5" id="exampleModalLabel">Xóa sản phẩm</h1>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <input type="hidden" id="id" name="id">
-                                    Bạn có chắc chắn muốn xóa sản phẩm
-                                    <span style="color: red" id="name"> </span>?
-                                    <!--                                có id là: <span style="color: red" id="idDelete"></span> ?-->
-                                    <p style="color: red">Hoạt động này không thể hoàn tác! </p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy</button>
-                                    <button type="submit" class="btn btn-primary">Xóa</button>
-                                </div>
-                            </div>
+                                    <li th:class="${!products.hasNext()} ? 'page-item disabled' : 'page-item'"><a
+                                            class="page-link"
+                                            th:href="@{/product(page=${products.number+1},name=${name},productType=${productType},price=${price})}">Tới</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                            <!------------------------End Paging------------------------------------------------------------>
                         </div>
-                    </form>
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                             aria-hidden="true">
+                            <form action="/product/delete" method="post">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h1 class="modal-title fs-5" id="exampleModalLabel">Xóa sản phẩm</h1>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                    aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <input type="hidden" id="id" name="id">
+                                            Bạn có chắc chắn muốn xóa sản phẩm
+                                            <span style="color: red" id="name"> </span>?
+                                            <!--                                có id là: <span style="color: red" id="idDelete"></span> ?-->
+                                            <p style="color: red">Hoạt động này không thể hoàn tác! </p>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                                                Hủy
+                                            </button>
+                                            <button type="submit" class="btn btn-primary">Xóa</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
+            </div>
+            <div th:replace="layout::footer">
             </div>
         </div>
     </div>
 </div>
+
 <div class="position-fixed bottom-0 end-0 p-3">
     <div id="liveToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
