--- a/coffee_project/src/main/resources/templates/user/list.html
+++ b/coffee_project/src/main/resources/templates/user/list.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" th:href="@{/bootstrap-5.0.2-dist/css/bootstrap.css}"
           href="../static/bootstrap-5.0.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    >
     <script src="/js/jquery-3.7.0.min.js"></script>
     <style>
         .modal-backdrop {
@@ -29,7 +28,7 @@
                 <div class="col-12">
 
                     <!-----------------------//CODE------------------------------------------------------------>
-                    <h1 style="text-align: center; margin-bottom: 20px">Quản Lý Nhân Viên</h1>
+                    <h1 style="text-align: center; margin-bottom: 20px;margin-top: 2rem">Quản Lý Nhân Viên</h1>
 
                     <div class="justify-content-center" style="margin-bottom: 20px">
 
