[QUYEN][CUSTOMER] dto

--- a/coffee_project/src/main/resources/templates/customer/edit.html
+++ b/coffee_project/src/main/resources/templates/customer/edit.html
@@ -74,10 +74,10 @@
                                                        th:errors="*{customerPhoneNumber}" style="color: red"></small>
                                             </td>
                                         </tr>
-                                        <!-- <tr>-->
-                                        <!-- <th>Điểm <span style="color: red">*</span></th>-->
-                                        <!-- <td><input class="form-control" th:field="*{customerPoint}" readonly></td>-->
-                                        <!-- </tr>-->
+                                        <tr>
+                                            <th>Điểm <span style="color: red">*</span></th>
+                                            <td><input class="form-control" th:field="*{customerPoint}" readonly></td>
+                                        </tr>
                                         <tr>
                                             <td></td>
                                             <td>
