--- a/coffee_project/src/main/resources/templates/customer/create.html
+++ b/coffee_project/src/main/resources/templates/customer/create.html
@@ -54,9 +54,12 @@
                                             <th>Tên khách hàng <span style="color: red">*</span></th>
                                             <td>
                                                 <input class="form-control" type="text" th:field="*{customerName}">
-                                                <small th:if="${#fields.hasErrors('customerName')}"
-                                                       th:errors="*{customerName}"
-                                                       style="color: red"></small>
+                                                <div style="height: 20px">
+                                                    <small th:if="${#fields.hasErrors('customerName')}"
+                                                           th:errors="*{customerName}"
+                                                           style="color: red">
+                                                    </small>
+                                                </div>
                                             </td>
                                         </tr>
                                         <tr>
@@ -67,23 +70,31 @@
                                                 <input type="radio" th:field="*{customerGender}" th:value="false">
                                                 <span th:text="Nữ"></span>
                                                 </br>
-                                                <small th:if="${#fields.hasErrors('customerGender')}"
-                                                       th:errors="*{customerGender}" style="color: red"></small>
+                                                <div style="height: 20px">
+                                                    <small th:if="${#fields.hasErrors('customerGender')}"
+                                                           th:errors="*{customerGender}" style="color: red">
+                                                    </small>
+                                                </div>
                                             </td>
                                         </tr>
                                         <tr>
                                             <th>Ngày sinh <span style="color: red">*</span></th>
                                             <td><input class="form-control" type="date" th:field="*{customerBirthday}">
-                                                <small th:if="${#fields.hasErrors('customerBirthday')}"
-                                                       th:errors="*{customerBirthday}" style="color: red"></small>
+                                                <div style="height: 20px">
+                                                    <small th:if="${#fields.hasErrors('customerBirthday')}"
+                                                           th:errors="*{customerBirthday}" style="color: red"></small>
+                                                </div>
                                             </td>
                                         </tr>
                                         <tr>
                                             <th>Số điện thoại <span style="color: red">*</span></th>
                                             <td><input class="form-control" type="text"
                                                        th:field="*{customerPhoneNumber}">
-                                                <small th:if="${#fields.hasErrors('customerPhoneNumber')}"
-                                                       th:errors="*{customerPhoneNumber}" style="color: red"></small>
+                                                <div style="height: 20px">
+                                                    <small th:if="${#fields.hasErrors('customerPhoneNumber')}"
+                                                           th:errors="*{customerPhoneNumber}"
+                                                           style="color: red"></small>
+                                                </div>
                                             </td>
                                         </tr>
                                         <tr>
