--- a/coffee_project/src/main/resources/templates/customer/view.html
+++ b/coffee_project/src/main/resources/templates/customer/view.html
@@ -25,7 +25,7 @@
                 <div class="col-12">
                     <!--------------------------------------Main------------------------------------>
                     <div class="detail">
-                        <div style="text-align: center; margin-top: 2rem"><h1><b>Thông Tin Khách Hàng</b></h1></div>
+                        <div style="text-align: center; margin-top: 2rem"><h1>Thông Tin Khách Hàng</h1></div>
                         <div class="table"
                              style="text-align: center;display: flex;justify-content: center; margin-top: 2rem">
                             <table class="table table-hover" style="width: 60%">
